tests/snapshots/regression/semantic_types__modules__private_member__main.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/modules/private_member/main.flx
exit_code: 1

[ 1 of 13] Compiling  Assert
[ 2 of 13] Compiling  Debug
[ 3 of 13] Compiling  Array
[ 4 of 13] Compiling  List
[ 5 of 13] Compiling  Either
[ 6 of 13] Compiling  IO
[ 7 of 13] Compiling  Math
[ 8 of 13] Compiling  Numeric
[ 9 of 13] Compiling  Option
[10 of 13] Compiling  Primops
[11 of 13] Compiling  String
[12 of 13] Compiling  Math
• 1 error • tests/fixtures/semantic_types/modules/private_member/main.flx
error[E011]: Private Member

Cannot access private member `hidden`.

  tests/fixtures/semantic_types/modules/private_member/main.flx:4:5
  |
4 |     M.hidden(1)
  |     ^^^^^^^^

Hint:
  Private members can only be accessed within the same module. Use `public fn` to export a function.
